# task2-surveillance_system

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/smart_surveillance/lib/smart_surveillance/: camera_stream  depth_estimator  event_logger  event_manager  object_detector  scene_analyzer  security_response  system_monitor
install/smart_surveillance/share/smart_surveillance/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/surveillance_interfaces/include/surveillance_interfaces/surveillance_interfaces/action/detail/: security_action__functions.c  security_action__functions.h  security_action__struct.h  security_action__traits.hpp  security_action__type_support.c  security_action__type_support.cpp
install/surveillance_interfaces/include/surveillance_interfaces/surveillance_interfaces/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
install/surveillance_interfaces/share/ament_index/resource_index/parent_prefix_path/: surveillance_interfaces
install/surveillance_interfaces/share/surveillance_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/surveillance_interfaces/share/surveillance_interfaces/action/: SecurityAction.json
install/surveillance_interfaces/share/surveillance_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_surveillance_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_surveillance_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_surveillance_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  surveillance_interfacesConfig.cmake  surveillance_interfaces__rosidl_typesupport_cExport.cmake  surveillance_interfaces__rosidl_typesupport_cppExport.cmake  surveillance_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  surveillance_interfaces__rosidl_typesupport_introspection_cExport.cmake  surveillance_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
log/: latest_build
smart_surveillance/: .gitignore  CMakeLists.txt  setup.cfg  setup.py
smart_surveillance/smart_surveillance/: camera_stream.py  depth_estimator.py  object_detector.py  scene_analyzer.py  security_response.py
src/smart_surveillance/: package.xml.save
src/smart_surveillance/launch/: surveillance_system.launch.py
src/smart_surveillance/smart_surveillance/: event_logger.py  object_detector.py  security_response.py  system_monitor.py
src/surveillance_interfaces/: CMakeLists.txt  package.xml
surveillance_interfaces/action/: SecurityAction.action
