<?xml version="1.0"?>
<package format="3">
  <name>surveillance_interfaces</name>
  <version>1.0.0</version>
  <description>Custom interfaces for surveillance system</description>
  <maintainer email="team@example.com">Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>